--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,7 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# See https://help.github.com/ignore-files/ for more about ignoring files.
 
 # dependencies
 /node_modules
-/.pnp
-.pnp.js
 
 # testing
 /coverage
@@ -11,13 +9,31 @@
 # production
 /build
 
+.env
+
+#folder to store secrets
+secrets
+
+#end-to-end
+cypress.env.json
+cypress/screenshots/
+cypress/videos/
+
 # misc
+.env
 .DS_Store
+.env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
+.idea/*
+.doc
 
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+package-lock.json
+yarn.lock
+deploy
+.vscode
